# COCOHRIW_speech_interaction

./: README.md
ai_dialog_manager/: package.xml  setup.cfg  setup.py
ai_dialog_manager/ai_dialog_manager/dialog_manager/: dialog_llm_interface.py  dialog_manager_node.py  dialog_manager_node_old.py  task_completion_handler.py
ai_dialog_manager/ai_dialog_manager/transcription_classificator/: config.yaml  invalid_input.yaml
ai_dialog_manager/dialog_manager/: task_completion_handler.py
ai_dialog_manager/launch/: dialog_system.launch.py  llm_nodes.launch.py
ai_dialog_manager/transcription_classificator/: invalid_input.yaml  transcription_classificator_node.py
coqui_tts/: package.xml  setup.py
coqui_tts/coqui_tts/: config.yaml  tts_client.py  tts_service_node.py
coqui_tts_interfaces/: CMakeLists.txt  package.xml
coqui_tts_interfaces/msg/: SpeakingStatus.msg
coqui_tts_interfaces/srv/: Speak.srv
dialog_interfaces/: CMakeLists.txt  package.xml
dialog_interfaces/msg/: DialogState.msg
pointing_interaction/: CMakeLists.txt  package.xml
pointing_interaction/include/pointing_interaction/: intersection_library.hpp
pointing_interaction/launch/: lmc_intersection_publisher.launch.py
pointing_interaction/msg/: PointingIntersection.msg
pointing_interaction/pointing_interaction/include/pointing_interaction/: intersection_library.hpp
pointing_interaction/pointing_interaction/launch/: lmc_intersection_publisher.launch.py
pointing_interaction/pointing_interaction/src/: lmc_intersection_publisher_node copy.cpp  lmc_intersection_publisher_node.cpp
pointing_interaction/src/: lmc_intersection_publisher_node copy 2.cpp  lmc_intersection_publisher_node.cpp
ros2_ollama_interface/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_ollama_interface/ros2_ollama_interface/client/: config.yaml  test_client.py  test_client_old.py
ros2_ollama_interface/ros2_ollama_interface/service/: config.yaml  llm_service_node.py  llm_service_node_old.py
ros2_ollama_msgs/: CMakeLists.txt  package.xml
ros2_ollama_msgs/srv/: RunPrompt.srv
task_executor/: CMakeLists.txt  package.xml
task_executor/include/task_executor/: intersection_library.hpp
task_executor/launch/: task_executor.launch.py
task_executor/src/task_executor/: task_executor_node backup 1408.cpp  task_executor_node.cpp  task_executor_node_new.cpp
task_extractor/: CMakeLists.txt  README.md  config.yaml  package.xml  setup.cfg  setup.py
task_extractor/config/: config.yaml
task_extractor/msg/: Task.msg
task_extractor/scripts/: task_subscriber.py  task_validator_node.py
task_extractor/src/: task_extractor.py  task_validator.py
task_extractor/task_extractor/: task_extractor.py  task_extractor_node.py  task_extractor_node_beta.py  task_extractor_node_old.py  task_types.py  task_validator.py  task_validator_node.py
task_msgs/: CMakeLists.txt  README.md  package.xml
task_msgs/msg/: TaskArray.msg
whisper_stt/: CMakeLists.txt  README.md  package.xml  setup.py
whisper_stt/config/: config.yaml
whisper_stt/src/: transcription_node.py
whisper_stt/whisper_stt/: README.md  transcription_node copy.py  transcription_node.py  transcription_node00.py
workspace_objects/: CMakeLists.txt  package.xml
workspace_objects/config/: objects.yaml
workspace_objects/launch/: workspace_objects.launch.py
workspace_objects/src/: workspace_objects_node.cpp
