<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_extractor</name>
  <version>0.0.0</version>
  <description>Task extractor package for ROS 2. This package processes a text in a natural human language and using a locally run LLM tries to extract a task for a robot with all relevant information</description>
  <maintainer email="marek.cornak@stuba.sk">marek</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>task_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
